feat: initialize GSB Infrastructure Manager Electron project with portable launcher and dependency management

--- a/Application_sisr/package.json
+++ b/Application_sisr/package.json
@@ -8,6 +8,16 @@
     "build": "electron-builder",
     "build:win": "electron-builder --win"
   },
+  "build": {
+    "appId": "com.gsb.infrastructure",
+    "win": {
+      "target": "portable",
+      "icon": "assets/icon.ico"
+    },
+    "portable": {
+      "artifactName": "GSB_Manager_Portable.exe"
+    }
+  },
   "keywords": [
     "infrastructure",
     "server",
