Add repository field to package.json
Added repository information to package.json

--- a/Application_sisr/package.json
+++ b/Application_sisr/package.json
@@ -3,6 +3,10 @@
   "version": "2.3.0",
   "description": "GSB Infrastructure Manager - Application desktop premium pour gestion de serveurs",
   "main": "main.js",
+  "repository": {
+  "type": "git",
+  "url": "https://github.com/SEIGI06/applicationLL.git"
+},
   "scripts": {
     "start": "electron .",
     "build": "electron-builder",
