--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,8 @@ on:
   push:
     tags:
       - 'v*'
-
+permissions:
+  contents: write  # Needed to create releases and upload assets
 jobs:
   release:
     runs-on: windows-latest
